Added method for DropboxAPI createFolder/s and modify delete files